--- a/localisation/PB_Prussia_l_english.yml
+++ b/localisation/PB_Prussia_l_english.yml
@@ -5,7 +5,7 @@
   ##########################
 
   ##########################
-  # Traits/Leader_Desc/Nation_Desc
+  # Traits/Leader_Desc/Nation_Desc/Super_Event_Shit
   ##########################
 
   PB_Der_Berater:0 "Der Berater"
@@ -16,9 +16,13 @@
   
   Hermann_Hopker_Aschoff_DESC:0 "§YBorn:§!15/02/1878\n\n§YHermann Hopker Aschoff§! was a main proponent of the short lived §LPrussian§! Republic though once §ODer Berater§! and his troops started marching through Königsberg he kept a silent voice of protest. He should be dead by all means especially during the midnight massacres though it seems his name was rubbed off the hit lists for one reason or another. Thats assuming it was on there to begin with. Now he finds himself chancellor of the republic he dreamed §LPrussia§! of being and has already begin reconstructing the nation to fit his perfect view of Democracy."
 
-  PRS_Country_Desc_Topbar:0 "§YPrussia§! is a bufferzone between §CRussia§! and §YGermany§! torn out by internal issues.\n\n§LPrussia§!, a nation that once stood mighty and strong is now nothing more but a state experiencing an unwakeable nightmare. After nationalist unrest erupted in the once §CRussian§! owned states of §LPrussia§! during the 1920s the Tsar was forced to kneel against his will to a Free state overseered by a democratic party compromised of conservatives. Though this wouldn't last for long and a ultranationilst coup would soon follow speer headed by §YPhilipp Bouhler§!. The result of such political strife is a technically independent §LPrussia§! with §CRussian§! oversight.\n\nThroughout §LPrussia's§! relatively short history she has endured political abuse by both her father nation, §YGermany§! and her cossack overlord, §CRussia§!. Nicknamed the §GGreat Game§! between §REnglish§! historians the formal concept of a bufferzone between the two powers has become a very real reality with both nations promising §LPrussia§! European prominence and most importantly, land. Combined with ethnic tensions and political issues relating to the §LPrussian§! junkers it is not unwise to say that the future for this ancient nation may not be a bright one, if there is a future at all for them.\n\n§LPrussia§! is a §YMinor Power.§!"
+  PRS_Country_Desc_Topbar:0 "§YPrussia§! is a bufferzone between §CRussia§! and §YGermany§! in Europe in 1933.\n\n§LPrussia§!, a nation that once stood mighty and strong is now nothing more but a state experiencing an unwakeable nightmare. After nationalist unrest erupted in the once §CRussian§! owned states of §LPrussia§! during the 1920s the Tsar was forced to kneel against his will to a Free state overseered by a democratic party compromised of conservatives. Though this wouldn't last for long and a ultranationilst coup would soon follow speer headed by §YPhilipp Bouhler§!. The result of such political strife is a technically independent §LPrussia§! with §CRussian§! oversight.\n\nThroughout §LPrussia's§! relatively short history she has endured political abuse by both her father nation, §YGermany§! and her cossack overlord, §CRussia§!. Nicknamed the §GGreat Game§! between §REnglish§! historians the formal concept of a bufferzone between the two powers has become a very real reality with both nations promising §LPrussia§! European prominence and most importantly, land. Combined with ethnic tensions and political issues relating to the §LPrussian§! junkers it is not unwise to say that the future for this ancient nation may not be a bright one, if there is a future at all for them.\n\n§LPrussia§! is a §YMinor Power.§!"
  
   PRS_PAX_BRITANNICA_DESC:0 "Prussia stands at the crossroads between Russia and Germany. A state divided ethnically and politicly she must traverse the dangerous waters of the two giants to ensure her survival. Though if she crashes her short lived independence will be forgotten entirely and her people enslaved yet again."
+
+  SPEVNT_German_Prussian_Union_TEXT:0 ""The word "if" is the most German of all German words."\n§Y-Friedrich Hebbel-§!"
+
+  SPEVNT_German_Prussian_Union:0 "§YA United Germany§!"
 
   ##########################
   # IDEAS
@@ -50,6 +54,10 @@
   PB_PRS_Industry: "For The People"
   PB_PRS_Germany:0 "A German Prussia"
   PB_PRS_Germany_desc:0 "Not only do both Prussia and Germany share common values but we have had a long history of united peoples. We shall continue this endevour for the betterment of the Germanic race."
+  PB_PRS_Freedom_Of_Movement:0 "Freedom Of Movement"
+  PB_PRS_Freedom_Of_Movement_desc:0 "There is unrestricted movement between the German peoples."
+  PB_PRS_New_Markets:0 "New Markets"
+  PB_PRS_Krupp:0 "Investments From Krupp"
 
   ##########################
   # DECISIONS
@@ -87,6 +95,11 @@
   prussia8tooltip:0 "§LPrussia§! [PRS.GetFlag] will stay neutral\n\n"
   prussia9tooltip:0 "§LPrussia§! [PRS.GetFlag] will side with §YGermany§! [GER.GetFlag]\n\n"
   prussia10tooltip:0 "The Junkers will assume control of §LPrussia§! through a bloody coup.\n\n"
+  prussia11tooltip:0 "A series of §YForts§! will be built along the eastern side of §LPrussia§!."
+  prussia12tooltip:0 "You will gain two §RElite§! divisions."
+  prussia13tooltip:0 "You will gain three §GBasic§! infantry divisions." 
+  prussia14tooltip:0 "A union will form between §LPrussia§! and §YGermany§!\n\n§R-This Will Result In Annexation-§!"
+  prussia15tooltip:0 "A §GNews Event§! will fire!"
 
   ##########################
   # EVENTS
@@ -119,6 +132,16 @@
   prussia9title:0 "Prussia Sides With Us!"
   prussia9desc:0 "Today the Prussian delegation publicly announced that it would futher political and cultural ties with us leaving Russia out in the dust. This is an acceptable outcome and today forwards we will no longer be seperate nations but brothers united in dirt and blood."
   prussia9opta:0 "We Are Brothers After All"
+  prussia10title:0 "Prussia Requests Hinterpommern"
+  prussia10desc:0 ""
+  prussia10opta:0 "Since They Asked Nicely"
+  prussia10optb:0 "Tell Them No" 
+  prussia11title:0 "Germany Accepts!"
+  prussia11desc:0 ""
+  prussia11opta:0 "How Did That Work?"
+  prussia12title:0 "Germany Refuses!"
+  prussia12desc:0 ""
+  prussia12opta:0 "I Thought We Were Brothers"
 
   ##########################
   # FOCUS
