lot of shit I needed to push

--- a/localisation/PB_Italy_l_english.yml
+++ b/localisation/PB_Italy_l_english.yml
@@ -152,6 +152,13 @@ italy.50.a:0 "We won, but at what cost?"
 italy.51.t:0 "A Funeral of Fake Silence"
 italy.51.d:0 "The death of Italy's great leader, Gabrielle D'Annunzio, has left the nation shattered. The ANI party, once proudly unified under the charming aristocrat with aerial experience, now is leaderless. The funeral of D'Annunzio would be the best example of the vacuum left behind, as the big factions inside the party already started their struggle for power while D'Annunzio laid in his open casket. \n\nThe funeral remained relatively uneventfull and silent, untill the goodbye speech of Italo Balbo, D'Annunzio's former party associate and the supposed leader of a military-aligned faction inside the ANI. While his speech wasn't as charming as most before him, Balbo's speech did silently dig into the question of leadership after D'Annunzio. With much care and subtelty, Balbo painted himself as the true successor of Il Vate. This would not sit well with Marinetti, leader of the futurist fraction of the ANI and a radical opponent of Balbo's traditionalist military faction. Marinetti would continue to be silent and thoughtfull during the funeral, but would start to gather his support in the party mere hours after the casket was lowered into the ground."
 italy.51.a:0 "Only the dead may rest"
+italy.52.t:0 "The next Duce"
+italy.52.d:0 "The death of D'Annunzio has been a tragic event for the ANI government, but a serious decision has to be made in these times of grief. With the party split among the factions of Marinetti and Balbo, the council of loyalists, the inner party leadership founded to make important decisions in the wake of D'Annunzio's death, has to decide upon a new leader for the ANI and a next prime minister for Italy. \n\nMarinetti seems like the odd choice for many, having never been one of D'Annunzio's close friends and generally enjoying his time with a group of futurists outside of the party. His faction, however, is the larger faction in the ANI, having absorbed a large portion of the D'Annunzio's old loyalists. Despite the strenght in his faction behind his back, Marinetti lacks support from the army and the blueshirts. \n\nBalbo, on the other hand, is a more traditional pick: having worked hard in the airforce and being a popular military candidate, Balbo has the firepower to back his claim to the seat of prime minister. However, his dictatorial tendency does raise suspicion among the council."
+italy.52.a:0 "Marinetti is the clear succesor"
+italy.52.b:0 "Balbo will keep Italy safe"
+italy.53.t:0 "Massacre in Naples"
+italy.53.d:0 "The blueshirts were clearly not prepared for an actual reaction by the government, as the newspapers today describe the total massacre of the former blueshirt squads after the army reacted. \n\nMarinetti, knowing of the situation he was in, decided to stand his ground against Starace and his violent band of blueshirts. The message of Marinetti's defiance in the face of blueshirt aggression lead to the blueshirts walking into Naples, armed and ready for revolution. However, the armed forces had already set up defensive positions in the capital, knowing of the march to Naples. The eventual result was a bloodbath, as thousands of men became trapped between a swiftly made barricade and flanking soldiers. In the end, the streets of Naples were cleaned and the blueshirts dissolved, leaving Marinetti's government unchallenged by the violent squadristi of Italy."
+italy.53.a:0 "A toast to victory!"
 
 italy.100.t:0 "Malta Conference - Preperations"
 italy.100.d:0 "With the Malta Conference coming closer every day, serious preperations are needed to be made to properly represent our wishes during the conference. While the ANI would prefer a complete end to the Treaty of Anzio and the shame it brings to Italy, most members of the ministry of foreign affairs and the cabinet see the danger in proposing such an extreme idea and are thus in favour of proposing a reasonable demand, loosening the military restrictions put on Italy."
@@ -456,6 +463,11 @@ ITA_PB_Graziani:0 "Rodolfo Graziani"
 ITA_PB_Perlasca_ECM:0 "Giorgio Perlasca"
 PB_Violent_Individual:0 "Violent Individual"
 PB_False_Smile:0 "False Smile"
+ITA_PB_Bruno_HOS:0 "Bruno Villabruna"
+ITA_PB_Sturzo_HOS:0 "Luigi Sturzo"
+ITA_PB_Orlando_HOS:0 "Vittorio Orlando"
+ITA_PB_Rosselli_HOS:0 "Carlo Rosselli"
+ITA_PB_Turati_HOS:0 "Filippo Turati"
 
 #########MISSION TREE
 ITA_PAX_BRITANNICA_DESC:0 "With the defeat of the Italian Kingdom in the Great War and the humiliating Treaty of Anzio, the Italian establishment became weak in the eyes of many. The turbulence that the democratic governments experienced in the '20s still haunt Italy in the '30s, with nationalists and socialists continueing to destabilize. Under the fresh ANI government of D'Annunzio, Italy has yet to truely recover from the economic malace of after the Great War and heal from the political violence terrorizing the streets of Naples, Rome and Milan. Can the ANI truely recover Italian glory?"
@@ -482,6 +494,10 @@ PB_ITA_Chain_Local_Squadristi_desc:0 "As local nationalist vigilants, the Squadr
 PB_ITA_Make_Public_Promises:0 "Make Public Promises"
 PB_ITA_Italy_Breaks:0 "Outbreak of the Revolution"
 
+ITA_ANNUNZIO_CHOSEN:0 "§YD'Annunzio has survived the attempt on his life§!"
+ITA_MARINETTI_CHOSEN:0 "§YThe Council of Loyalists has chosen Marinetti as succesor§!"
+ITA_BALBO_CHOSEN:0 "§YThe Council of Loyalists has chosen Balbo as succesor§!"
+        
 ITA_RED_MONTH_BEGUN:0 "§RThe Red Months§! have begun"
 ITA_VIOLENT_MONTH:0 "§GItaly§! has chosen to deal with the revolutionaries with the use of §RViolence§!"
 ITA_DIPLOMATIC_MONTH:0 "§GItaly§! has chosen to deal with the revolutionaries with the use of §gDiplomacy§!"
