More Prussian Stuff

--- a/localisation/PB_Prussia_l_english.yml
+++ b/localisation/PB_Prussia_l_english.yml
@@ -58,7 +58,8 @@
   PB_PRS_Freedom_Of_Movement_desc:0 "There is unrestricted movement between the German peoples."
   PB_PRS_New_Markets:0 "New Markets"
   PB_PRS_Krupp:0 "Investments From Krupp"
-
+  PB_PRS_GER_eco:0 "German Dominance Over Prussian Industry"
+  PB_PRS_GER_eco2:0 "German Dominance Over Prussian Industry"
   ##########################
   # DECISIONS
   ##########################
@@ -100,6 +101,7 @@
   prussia13tooltip:0 "You will gain three §GBasic§! infantry divisions." 
   prussia14tooltip:0 "A union will form between §LPrussia§! and §YGermany§!\n\n§R-This Will Result In Annexation-§!"
   prussia15tooltip:0 "We will become a §ODominion§! under §YGermany§!"
+  PRS_BLACK_MONTH_HITS:0 "§gBlack Month Has Hit Prussia§!"
 
   ##########################
   # EVENTS
@@ -220,3 +222,29 @@
   PRS_beyond_the_mind:0 "Beyond The Mind"
   PRS_economic_mobilization:0 "Economic Mobilization"
   PRS_weapon_manufacturies:0 "Weapon Manufacturies"
+  PRS_the_theory_of_war:0 "The Theory Of War"
+  PRS_revolutionize_the_horse:0 "Revolutionize The Horse"
+  PRS_enfore_the_spike_concept:0 "Enfore The Spike Concept"
+  PRS_quick_reinforcement:0 "Quick Reinforcement"
+  PRS_utilize_the_mechs:0 "Utilize The Mechs"
+  PRS_drill_the_troops:0 "Drill The Troops"
+  PRS_further_excersises:0 "Further Excersises"
+  PRS_fierce_military_debates:0 "Fierce Military Debates"
+  PRS_new_ideas:0 "New Ideas"
+  PRS_traditionalism_at_its_finest:0 "Traditionalism At Its Finest"
+  PRS_advanced_batteries:0 "Advanced Batteries"
+  PRS_sharpened_bayonets:0 "Sharpened Bayonets"
+  PRS_anti_tank_emplacements:0 "Anti-Tank Emplacements"
+  PRS_conquer_the_skies:0 "Conquer The Skies"
+  PRS_radar_tech:0 "Radar Tech"
+  PRS_simulate_an_air_raid:0 "Simulate An Air Raid"
+  PRS_listen_to_all_proposals:0 "Listen To All Proposals"
+  PRS_the_future_of_war:0 "The Future Of War"
+  PRS_embrace_the_bomber:0 "Embrace The Bomber"
+  PRS_utter_devastation:0 "Utter Devastation"
+  PRS_no_land_to_far:0 "No Land To Far"
+  PRS_strategic_bombers:0 "Strategic Bombers"
+  PRS_embrace_the_fighter:0 "Embrace The Fighter"
+  PRS_complete_dominance:0 "Complete Dominance"
+  PRS_troop_assistance:0 "Troop Assistance"
+  PRS_encourage_the_ace_initiative:0 "Encourage The Ace Initiative"
