--- a/localisation/PB_Prussia_l_english.yml
+++ b/localisation/PB_Prussia_l_english.yml
@@ -25,6 +25,11 @@
   SPEVNT_German_Prussian_Union:0 "§YA United Germany§!"
 
   ##########################
+  # COSMETIC TAGS
+  ##########################
+  PRS_RUS:0 "Prussian Dependency"
+  PRS_RUS_DESC:0 "the Prussian Dependency"
+  ##########################
   # IDEAS
   ##########################
   
@@ -60,6 +65,7 @@
   PB_PRS_Krupp:0 "Investments From Krupp"
   PB_PRS_GER_eco:0 "German Dominance Over Prussian Industry"
   PB_PRS_GER_eco2:0 "German Dominance Over Prussian Industry"
+  PB_PRS_Russia:0 "A Russian Prussia"
   ##########################
   # DECISIONS
   ##########################
@@ -81,7 +87,9 @@
   PRS_Influence_For_Prussia_desc: "We have had enough of both §YGermany's§! and §CRussia's§! antics."
   PRS_Influence_For_Germany: "A §YGerman§! §LPrussia§!"
   PRS_Influence_For_Germany_desc: "If Prussia is to survive through the modern world then our best bet is with §YGermany§!."
- 
+  PRS_Influence_For_Russia:0 "A §CRussian§! §LPrussia§!"
+  PRS_Influence_For_Russia_desc:0 "If Prussia is to survive through the modern world then our best bet is with §CRussia§!."
+
   ##########################
   # TOOLTIPS
   ##########################
@@ -103,6 +111,8 @@
   prussia15tooltip:0 "We will become a §ODominion§! under §YGermany§!"
   PRS_BLACK_MONTH_HITS:0 "§gBlack Month Has Hit Prussia§!"
   PRS_POL_IND:0 "§gThe Polish War Of Independence Has Happened§!"
+  prussia16tooltip:0 "§LPrussia§! [PRS.GetFlag] will side with §CRussia§! [RUS.GetFlag]\n\n"
+  prussia17tooltip:0 "We will become a §ODominion§! under §CRussia§!"
   ##########################
   # EVENTS
   ##########################
@@ -147,6 +157,12 @@
   prussia13title:0 "Germany Wins The Great Game"
   prussia13desc:0 "In a public statement made by Prussia they have openly announced their plans for a new age of cooperation between Germany, disregarding Russia after refusing to make any reference on them and their political situation. This occured only moments after a bloody coup took place hosted none other than the infamous Prussian Junkers. With a new democratic leadership one can only begin to imagine what the future will hold for this so called Prussian Republic."
   prussia13opta:0 "Poor Russia"
+  prussia14title:0 "Prussia Sides With Us!"
+  prussia14desc:0 "Today the Prussian delegation publicly announced that it would futher political ties with us leaving Germany out in the dust. This is an acceptable outcome and today forwards no longer will we have to stare towards Prussia with a scratch on our heads."
+  prussia14opta:0 "Poor Germany"
+  prussia15title:0 "Prussia Sides With Russia!"
+  prussia15desc:0 "Today the Prussian delegation publicly announced that it would futher political ties with Russia leaving us out in the dust. This is an unacceptable outcome and though they may be under the protection of the Russian Tsar their independence will surely be trampled on."
+  prussia15opta:0 "Bastards!"
 
   ##########################
   # FOCUS
