More Prussian Stuff

--- a/localisation/PB_Prussia_l_english.yml
+++ b/localisation/PB_Prussia_l_english.yml
@@ -113,6 +113,8 @@
   PRS_POL_IND:0 "§gThe Polish War Of Independence Has Happened§!"
   prussia16tooltip:0 "§LPrussia§! [PRS.GetFlag] will side with §CRussia§! [RUS.GetFlag]\n\n"
   prussia17tooltip:0 "We will become a §ODominion§! under §CRussia§!"
+  prussia18tooltip:0 "A series of §YForts§! will be built along the western side of §LPrussia§!."
+  prussia19tooltip:0 "We will seek §GCooperation§! and §GFriendship§! with §CRussia§!."
   ##########################
   # EVENTS
   ##########################
@@ -154,7 +156,7 @@
   prussia12title:0 "Germany Refuses!"
   prussia12desc:0 "The German delegation has reviewed our request of Hinterpommern and have come to the conclusion that transfer of the state would not occur. They stated we have no right to make demands for territory especially German owned territory."
   prussia12opta:0 "I Thought We Were Brothers"
-  prussia13title:0 "Germany Wins The Great Game"
+  prussia13title:0 "Germany Wins The Great Game!"
   prussia13desc:0 "In a public statement made by Prussia they have openly announced their plans for a new age of cooperation between Germany, disregarding Russia after refusing to make any reference on them and their political situation. This occured only moments after a bloody coup took place hosted none other than the infamous Prussian Junkers. With a new democratic leadership one can only begin to imagine what the future will hold for this so called Prussian Republic."
   prussia13opta:0 "Poor Russia"
   prussia14title:0 "Prussia Sides With Us!"
@@ -163,7 +165,16 @@
   prussia15title:0 "Prussia Sides With Russia!"
   prussia15desc:0 "Today the Prussian delegation publicly announced that it would futher political ties with Russia leaving us out in the dust. This is an unacceptable outcome and though they may be under the protection of the Russian Tsar their independence will surely be trampled on."
   prussia15opta:0 "Bastards!"
-
+  prussia16title:0 "Prussia Requests Memel!"
+  prussia16desc:0 "Prussia has sent us a request for the transfer of memel. We can deny and we will be guaranteed peace though we could also follow through with their request seeing they have openly allied with us."
+  prussia16opta:0 "Do We Have A Choice?"
+  prussia16optb:0 "Tell Them No"
+  prussia17title:0 "The Baltic Governate Accepts!"
+  prussia17desc:0 "The Baltic Delegation has accepted our request for memel. Three hurrahs for diplomacy!"
+  prussia17opta:0 "Wonderful"
+  prussia18title:0 "The Baltic Governate Refuses!"
+  prussia18desc:0 "The Baltic Delegation has refused our request for memel. Diplomacy has failed us."
+  prussia18opta:0 "Disappointing"
   ##########################
   # FOCUS
   ##########################
@@ -277,5 +288,29 @@
   PRS_connect_the_towns:0 "Connect The Towns"
   PRS_the_cooperative_state:0 "The Cooperative State"
   PRS_under_the_tsars_guidance:0 "Under The Tsars Guidance"
-  PRS_divide_poland:0 "Divide Poland"
+  PRS_russian_settlers:0 "Russian Settlers"
   PRS_mass_militarization:0 "Mass Militarization"
+  ##########################
+  # Ministers/Generals
+  ##########################
+  PRS_Martin_Bormann:0 "Martin Bormann"
+  PRS_Martin_Bormann_desc:0 "Just like §YPhilipp Bouhler§!, §YMartin Bormann§! was once a devote supporter of the short lived Prussian Republic though as political tensions rose and economic suffering became more severe the §gVaterland Front§! promised Mr Bormann something no other party at the time could. A job and a future."
+  PRS_Herbet_Backe:0 "Herbet Backe"
+  PRS_Herbet_Backe_desc:0 "The most loyal follower of §YPhilipp Bouhler§!, §YHerbet Backe§! served in the same russian cavalry unit. Directly hearing Mr Bouhler's inspirational words. He is regarded as a loyal dog by both his contemporaries and political enemies."
+  PRS_Victor_Brack:0 "Victor Brack"
+  PRS_Victor_Brack_desc:0 "Once head of a small banking firm, §YMr Brack§! now finds himself responsible for the economic development of the Prussian State and its peoples."
+  PRS_Robert_Ley:0 "Robert Ley"
+  PRS_Robert_Ley_desc:0 "§YRobert Ley§! is the offical Foreign Minister Of Prussia. He has played a large role in the "dubbed" Great Game and has sort to play Prussia's political cards correctly and to her own benefit."
+  PRS_Walter_Buch:0 "Walter Buch"
+  PRS_Walter_Buch_desc:0 "§YWalter Buch§! is a quiet individual who knows that Prussia needs a strong guiding hand if she is to survive between these two giants. Order, discipline, and loyalty are his core principles that he wishes to share with his fellow Prussian."
+  PRS_August_Schmidtt:0 "August Schmidtt"
+  PRS_August_Schmidtt_desc:0 "The most rowdy of all of §YBouhler's§! followers, §YAugust Schmidtt§! has continously disagreed with proposals made by other §gVaterland§! politicians. Landing him in rough waters and a uncertain future."
+  PRS_Joseph_Berchtold:0 "Joseph Berchtold"
+  PRS_Joseph_Berchtold_desc:0 "Once a mighty solider in both the great war and prussian war of independence, §YJoseph Berchtold§! has seen it all and has come to the conclusion that politics is the next step for him. Putting his bloodshed behind to build a new Prussia."
+  PRS_Gottlob_Berger:0 "Gottlob Berger"
+  PRS_Gottlob_Berger_desc:0 "A loyal disciple of §YBouhler§!, §YGottlob Berger§! sees that education is the future. A reform to the education system along with youth programs will ensure a loyal and hardworking populace."
+  PRS_Franz_Halder:0 "Franz Halder"
+  PRS_Franz_Halder_desc:0 "Nicknamed the "Hard Worker" directly from §YBouhler§!, §YMr Halder§! served as an artilley officer during the great war. Now he serves the §gVaterland front§! sitting behind his cliché office desk typing away at his typewriter, undisturbed, dedicated, the "perfect" Prussian."
+  PRS_Maximilian_Wenger:0 "Maximilian Wenger"
+  PRS_Maximilian_Wenger_desc:0 "§YMaximilian§! is regarded as an intellectual who blindly follows §YBouhler§!. He publicly and privatly speaks well of the counsellor and his fellow §gVaterland Front§! brothers and is seen as the unofficial succesor to §YBouhler's§! Prussia."
+  Gerd_von_Rundstedt_desc:0 "§YGerd Von Rundstedt§! is regarded as a masterful tactician who has studied the ins and outs of war. Being the one who lead the Prussian war of independence along side §YBouhler§!. He is seen as §YBouhlers§! right hand man and is second only to §YMaximilian Wenger§! in regards of succession."
