--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -15,5 +15,25 @@
   ##########################
   # TRAITS
   ##########################
+
   PB_Lost_Son:0 "The Lost Tsarevich"
   PB_lost_Son_desc:0 "Tsar Nicholas II has lost all hope and lust for life since The Tragic Death of the Tsarevich Alexei Romanov and The Ensuing Suicide of the Tsarina Alexendra. Nicholas spends his days resting Vacant and Broken on the Imperial Throne letting his court and country decay apart from his seething hatred for his former allies who he blames for all his tragedies."
+ 
+  ##########################
+  # DECISIONS
+  ##########################
+  
+  PB_RUS_Culture:0 "Russian Blood"
+  PB_RUS_Culture_desc:0 "\n\n\n\n\n\n\n\n\n\n£russia_icon_large\n\n\n\n\nThe Russian colossus is a state compromised of various ethnicities who all seek autonomy in different ways. The Ukrainians demand regional autonomy, the Belarusians demand equal representation, and the Polish demand outright independence. Though these are just a few of the many cultures that call Russia home and if their fanatic ideas are left uncontained then our united peoples may turn into something feral in nature.\n\nRevolt Risk Is Currently  §Y[?rus_revolt]%§!\n\nRevolt Strength Is Currently  §Y[?rus_revolt_s]§!\n\n                                                             §YPyotr Wrangel§!\n                                                      Head Of The Okhrana\n                                                     §YPolitical Prominence:§! §O[?pyotr_s]%§!\n\n\n\n\n\n\n                                                 £Portrait_RUS_Pyotr_Wrangel_icon\n\n\n\n\n\n\n\n\n\n§YPyotr Wrangel§! is nicknamed the second Tsar after his major role in the Okhrana and their secret operations in keeping the Russian landscape a peaceful one. Overseeing many of the numerous raids against independence groups that existed in the industrial heartland and the eurasian steppes. He is officialy a close ally of §YTsar Nicholas II§! though truth be told he has bickered about the Tsar's continued reign and has been said to be one of the numerous political enemies that conspire against the Romanov.\n\nIf §YPyotr§! reaches §O100%§! §YPolitical Prominence§! he may attempt a §RCoup§!\n\n\n\n\n\n\n\n                                          £okhrana_icon_large\n\n\n\n\n\n\n\n\n\nThe §YOkhrana§! is a state police force that bears responsibilities in relation to public order. They were founded by §YTsar Nicholas§! post Great War, hunting enemies of the state for the betterment of the Russian people and have also seen use in some of her dominions, namely Poland. Speerheaded by §YPyotr§! they have enjoyed great success in cracking down on independence movements though as of recently the task of "Peacekeeping" has proved difficult and their survival as an organisation rests soley on their ability to keep Russia united.\n"
+  RUS_risk:0 "Cultral Agitation"
+  RUS_guns:0 "Raided Stockpiles"
+  RUS_brutal_oppression:0 "Brutal Oppresion"
+
+  ##########################
+  # TOOLTIPS
+  ##########################
+  
+  russia1tooltip:0 "Revolt Risk Will Increase By §R2§!"
+  russia2tooltip:0 "Revolt Strength Will Increase By §R3§!"
+  russia3tooltip:0 "Revolt Risk Will Decrease By §G-1§!"
+  russia4tooltip:0 "Revolt Strength Will Decrease By §G-4§!"
