--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -11,7 +11,8 @@
   
   PB_RUS_Bitter_Revanchism:0 "Bitter Revanchism"
   PB_RUS_Bitter_Revanchism_desc:0 "The Tsar and his people blame their former Allies of Britain and Germany for all their countries woes and the Current Government encourages this thought religiously."
-
+  PB_RUS_Russian_Nightmare:0 "The Russian Nightmare"
+  PB_RUS_Russian_Nightmare_desc:0 "From the frozen wastes of Siberia to the wheat fields of Ukraine there is an almost silent voice of protest against the Tsar's absolutist rule. Political enemies are large in number and even his closest allies would rather see him expelled from government."
   ##########################
   # TRAITS
   ##########################
@@ -28,6 +29,7 @@
   RUS_risk:0 "Cultral Agitation"
   RUS_guns:0 "Raided Stockpiles"
   RUS_brutal_oppression:0 "Brutal Oppresion"
+  RUS_pyotr:0 "Pyotr Is Making Moves"
 
   ##########################
   # TOOLTIPS
@@ -35,5 +37,12 @@
   
   russia1tooltip:0 "Revolt Risk Will Increase By §R2§!"
   russia2tooltip:0 "Revolt Strength Will Increase By §R3§!"
-  russia3tooltip:0 "Revolt Risk Will Decrease By §G-1§!"
+  russia3tooltip:0 "Revolt Risk Will Decrease By §G-2§!"
   russia4tooltip:0 "Revolt Strength Will Decrease By §G-4§!"
+  russia5tooltip:0 "Pyotr's political prominence will increase By §R2§!"
+ 
+  ##########################
+  # FOCUS
+  ##########################
+
+  RUS_nightmare:0 "Time To Wake Up"
