--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -96,3 +96,57 @@
   RUS_keep_the_peace:0 "Keep The Peace"
   RUS_pyotrs_disciples:0 "Pyotr's Disciples"
   RUS_the_perfect_citizen:0 "The Perfect Citizen"
+  RUS_the_light_from_moscow:0 "The Light From Moscow"
+  RUS_russian_might:0 "Russian Might"
+  RUS_bright_minds:0 "Bright Minds"
+  RUS_fan_russian_militarism:0 "Fan Russian Militarism"
+  RUS_a_nation_on_restart:0 "A Nation On Restart"
+  RUS_a_second_renaissance:0 "A Second Renaissance"
+  RUS_personal_ventures:0 "Personal Ventures"
+  RUS_enforce_the_hierachy:0 "Enforce The Hierachy"
+  RUS_a_rebirthed_empire:0 "A Rebirtherd Empire"
+  RUS_manufacturing_deals:0 "Manufacturing Deals"
+  RUS_what_to_do_with_the_romanovs:0 "What To Do With The Romanovs"
+  RUS_off_with_their_heads:0 "Off With Their Heads"
+  RUS_seize_their_wealth:0 "Seize Their Wealth"
+  RUS_burn_the_textbooks:0 "Burn The Textbooks"
+  RUS_death_to_pluralism:0 "Death To Pluralism"
+  RUS_regaining_control:0 "Regaining Control"
+  RUS_ban_unions:0 "Ban Unions"
+  RUS_the_grey_initiative:0 "The Grey Initiative"
+  RUS_all_in:0 "All In"
+  RUS_sacrifices_for_the_better:0 "Sacrifices For The Better"
+  RUS_colonial_revisions:0 "Colonial Revisions"
+  RUS_send_them_to_siberia:0 "Send Them To Siberia"
+  RUS_the_trans_siberian_railway:0 "The Trans-Siberian Railway"
+  RUS_cultral_revitalization:0 "Cultral Revitalization"
+  RUS_knock_down_the_doors:0 "Knock Down The Doors"
+  RUS_let_them_come:0 "Let Them Come"
+  RUS_beasts_of_the_night:0 "Beasts Of The Night"
+  RUS_russian_stoicism:0 "Russian Stoicism"
+  RUS_kingdom_come:0 "Kingdom Come"
+  RUS_please_the_elites:0 "Please The Elites"
+  RUS_convince_the_unconscionable:0 "Convince The Unconscionable"
+  RUS_integrity_through_force:0 "Integrity Through Force"
+  RUS_ignite_the_flames:0 "Ignite The Flames"
+  RUS_a_letter_to_no_one:0 "A Letter To No One"
+  RUS_take_a_seat:0 "Take A Seat"
+  RUS_make_them_pay:0 "Make Them Pay"
+  RUS_fortify_ryojun:0 "Fortify Ryojun"
+  RUS_non_aggression_pact_with_japan:0 "Non-Aggression Pact With Japan"
+  RUS_to_the_west:0 "To The West"
+  RUS_influence_romania:0 "Influence Romania"
+  RUS_influence_bulgaria:0 "Influence Bulgaria"
+  RUS_shipping_rights_through_istanbul:0 "Shipping Rights Through Istanbul"
+  RUS_seize_polish_lands:0 "Seize Polish Lands"
+  RUS_muster_the_troops:0 "Muster The Troops"
+  RUS_join_the_pact_revanchiste:0 "Join The Pacte Revanchiste"
+  RUS_total_war:0 "Total War"
+  RUS_atomic_theories:0 "Atomic Theories"
+  RUS_to_the_south:0 "To The South"
+  RUS_subjugate_persia:0 "Subjugate Persia"
+  RUS_subjugate_kalat:0 "Subjugate Kalat"
+  RUS_black_gold:0 "Black Gold"
+  RUS_conquer_surate:0 "Conquer Surate"
+  RUS_the_alaskan_offensive:0 "The Alaskan Offensive"
+  RUS_rush_to_hawaii:0 "Rush To Hawaii"
