Localisation for British Army focuses
Expect Royal Navy and RAF and some of the Imperial Conference stuff by tomorro

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -208,6 +208,7 @@
   PB_ENG_Full_Recovery:0 "Complete Recovery"
 
   PB_ENG_1934_Imperial_Conference:0 "The 1934 Imperial Congress"
+  PB_ENG_1934_Imperial_Conference_desc:0 "The 1934 Imperial Congress is the upcoming decision making for the Empire, already many advocates are calling for reform to the Imperial system. Many of the old guard have voices their opinions of direct rule from London, however citizens from the Commonwealth have called for Britain to lay down her mantle and allow the Commonwealth of nations take charge. "
   PB_ENG_Reforming_the_Dominions:0 "Debate Dominion Reform"
   PB_ENG_Debate_Economic_Policy:0 "Debate Economic Policy"
   PB_ENG_Debate_Military_Policy:0 "Debate Military Policy"
@@ -268,19 +269,32 @@
   PB_ENG_London_Calling:0 "London Calling"
 
   PB_ENG_Begin_Rearmament:0 "Rearmament"
+  PB_ENG_Begin_Rearmament_desc:0 "Since the end of the Great war many aspecs of the British military have been woefully underfunded. With radicalisim occuring across the channel in France and new threats to the the British Empire emerge, we must be ready at all costs with a newly revamped military."
 
   PB_ENG_Modernize_the_Officer_Corps:0 "Modernize the Officer Corps"
+  PB_ENG_Modernize_the_Officer_Corps_desc:0 "The current British officer corps are mainly veterans from the Great war in which due to their past experinces are promoting obsolete strategises across imperial command. By modernising the officer corps with new thoughts of military warfare with fresh tactics from a new generation of younger officers we shall moderenize the officer corps."
   PB_ENG_Great_War_Lessons:0 "Lessons from the Great War"
+  PB_ENG_Great_War_Lessons_desc:0 "The Great War was a military catastrophe for the empire, however many lessons were learnt from the trenches of Iberia to the deserts of Africa and the jungles of the Pacific. By learning from this experince the British military system shall create a robust military ready to stand toe to toe to whatever challenge the British Lion may face." 
   PB_ENG_Propose_Conscription:0 "Propose Conscription"
+  PB_ENG_Propose_Conscription_desc:0 "Compared to many armies of the globe the British military is considered a puddle compared to the great oceans of men many other nations can draw military personal from. In order to survive the next war Westminster must introduce conscription to allow the British military to have a military to match our foes."
   PB_ENG_Professional_Army:0 "Focus on a Professional Volunteer Army"
+  PB_ENG_Professional_Army_desc:0 "The British army has all ways been small in number compared to other military juggernaughts however as shown in the Great war we matched these armies and overcome these threats. This was not through quanity but through the quality of the British army, by carrying on this doctrine of focusing on the soldier the average British Tommy will be able to overcome these overwhelming numbers with ease." 
   PB_ENG_Establish_Doctrines:0 "Formalize a New Doctrine"
+  PB_ENG_Establish_Doctrines_desc:0 "With warfare changing forever since the Great war we must formalize a new military doctrine to face the new tactics being thrown at our Tommies whilst also maintaining British military supremacy."
   PB_ENG_Landship_Research:0 "Interests in Landship Development"
+  PB_ENG_Landship_Research_desc:0 "The Landship proved themselves in the Great war allowing many unwinnable battles to be won through their mechanized assault. Now nearly over two decades since the end of the Great war landships have evolved into many different types from cruisers to juggernaught landships and by intergrating these new weapons of war we will be able to crush Britannia's enemies through mechanized assault."
   PB_ENG_Support_Companies:0 "Expand Infantry Support Networks"
+  PB_ENG_Support_Companies_desc:0 "By expanding and truly intergrating the medical and logistical corps into the British high command, many shortcomings of the British infantry will be covered. By covering the shortcomings of the British infantry and many other aspects of the British military the casualties we suffered during the Great war shall never be seen again."
   PB_ENG_Fresh_Officers:0 "A New Generation of Officers"
+  PB_ENG_Fresh_Officers_desc:0 "The current staff of British officers are veterans of the Great war many of which are easily pushing their late thirties and forties. With the current staff ageing and the curse of age slowly dampening their physical abilties we must supply the army with a new generation of younger officers ready to lead the lads on front with distinction."
   PB_ENG_RWAC:0 "Royal Women's Auxiliary Corps"
+  PB_ENG_RWAC_desc:0 "By allowing women into the British military to fufill meanial jobs such as paper work and other jobs which tie fighting fit men from the front, we will be able to have more men to funnel to the front and engage the foes of Britannia."
   PB_ENG_Female_Pilots:0 "Royal Women's Air Corps"
+  PB_ENG_Female_Pilots:0 "Unlike the British army and the navy the Royal Air Force does require as much physical labour as the older branches of the military demand especially in a pilot's cockpit. By allowing woman to fly in the skies with the men much needed manpower can be devoted to other branches of the armed forces."
   PB_ENG_Officer_Field_Command:0 "Push for Officer Autonomy"
+  PB_ENG_Officer_Field_Command_desc:0 "British military commanders such as Colonel Stirling and other similiar minded men have called for the army to reform to allow officers to take opportunities when they arise to grant the British military a tactical edge on the battlefield. By embracing this new way of military thinking the British military will be able to crush any disorganized wave thrown at it."
   PB_ENG_Top_Down_Command:0 "Traditional Command Structure"
+  PB_ENG_Top_Down_Command_desc:0 "Staff officers of the imperial general staff such as Bernard Montgomery have called for the entrenchment of the traditional command structure. By allowing the general staff to implement combined warfare on a global scale the British military will be able to overwhelm any military resitance threatening British hegemony and reinforce the Pax Britannica for another century at least."
 
   PB_ENG_Navy_Reforms:0 "Royal Navy Reforms"
   PB_ENG_Fleet_in_Being:0 "Reinforce the Pound-Mahan Doctrine"
