Royal Naval Loc added

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -297,13 +297,21 @@
   PB_ENG_Top_Down_Command_desc:0 "Staff officers of the imperial general staff such as Bernard Montgomery have called for the entrenchment of the traditional command structure. By allowing the general staff to implement combined warfare on a global scale the British military will be able to overwhelm any military resitance threatening British hegemony and reinforce the Pax Britannica for another century at least."
 
   PB_ENG_Navy_Reforms:0 "Royal Navy Reforms"
+  PB_ENG_Navy_Reforms_desc:0 "The Royal navy left the Great war as the global naval hegemon at the forefront of the most powerful empire in the world. However times have changed, a resurgent french menance across the channel and a rearming Japanese state have caused many in the admiralty to call for a reform to the empire's navy."
   PB_ENG_Fleet_in_Being:0 "Reinforce the Pound-Mahan Doctrine"
+  PB_ENG_Fleet_in_Being_desc:0 "The old sea dogs of the Royal navy notably admiral Dudley Pound and his old guard in the Admiralty has called for the naval system to essentially remain the same however to also remove all impurities in the current method of naval warfare. This will allow the Royal Navy to carry on the big guns fleet left by Jackie Fisher whilst also preparing us for the next war."  
   PB_ENG_Embrace_Carriers:0 "Side with the Cunningham Clique"
+  PB_ENG_Embrace_Carriers_desc:0 "Vice admiral Andrew Browne Cunningham affectionately nick named ABC has called for the new useage of the 'aircraft carrier'. Cunningham has bought similiar minded officers in his station in the mediterranean to force the Admiralty to embrace aircraft into naval warfare citing that aicraft will be able to reach a hostile squadron quicker then any battlecruiser."
   PB_ENG_Expand_Trade_Fleet:0 "Expand the Trade Fleet"
+  PB_ENG_Expand_Trade_Fleet_desc:0 "The British Empire and her Commonwealth rely on the cargo ship to carry on the life blood of civilization around the globe. Over a third of world trade passes through Britain annually including raw materials and food supplies which keeps the crown of empire together. If this life blood is threaten then the empire falls so we must ensure to expand the merchant marine to keep the empire's way of life forever." 
   PB_ENG_Expand_Dockyards:0 "Expand the Dockyards"
+  PB_ENG_Expand_Dockyards_desc:0 "With old hostilities reemerging across the globe the British fleet must rearm as quickly as possible. Possessing the largest naval fleet in human history many of the ships in our possession are old ships requiring scuttling or upgrade provides no use to us. We must acquire new naval facilities across the empire to create not a grand fleet but an Imperial Armada to stand the test of war."
   PB_ENG_Submarines:0 "Contracts with the Scapa Flow Committee"
+  PB_ENG_Submarines_desc:0 " Many in the British cabinet support the acquisition of contracts with the Scapa Flow Committe; one of the largest submarine construction companies in the empire. By signing contracts with the Scapa Flow the imperial high command believes that by mass producing quality submarines the British fleet will be able to blockade entire nations to their knees."
   PB_ENG_Carrier_Fleet_Expansion:0 "Streamline Carrier Production"
+  PB_ENG_Carrier_Fleet_Expansion_desc:0 "By streamlining carriers and producing them by the dozens like we did in the previous Anglo-Franco naval race, many in high command believe that with the striking range of the aircraft carrier in the British fleet will be able to crush any hostile fleet through the range of these new naval behemoths and win our continued dominance of the seaven seas." 
   PB_ENG_Naval_Power_Projection:0 "Global Power Projection"
+  PB_ENG_Naval_Power_Projection_desc:0 "If the British army is the nation's right hand then the Royal navy is the empire's sword. Our empire was founded through the power of the Royal Navy across the globe and with a new age entering human history we must make sure to carry this tradition of naval dominance for another thousand years for it is the Royal navy which is Britannia's first line of defence."
 
   PB_ENG_Air_Reforms:0 "Reform the Royal Air Force"
   PB_ENG_Harris_Doctrine:0 "Harris Doctrine"
